--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,6 +23,8 @@ $dark: #0d2130;
 
 body {
   background: #dbe1e8;
+  margin: 0;
+  padding: 0;
 }
 
 /*-----------------------Nav--------------------------*/
@@ -145,7 +147,7 @@ nav {
         .card-text {
           color: white;
           font-family: "Eczar", serif;
-          font-size: 14px;
+          font-size: 16px;
           position: absolute;
           top: 50%;
           left: 50%;
